2008-01-09 Roman
- /SYS: Translation to Russian and Ukranian is updated
- FIX:/DAQ/ModBus: Request to remote server errors process is fixed.
- !!:/UI/WebVision: Support of brouser MS IE is added.


2007-12-27 Roman
- !!!:/UI/VCAEngine, /UI/Vision: Slider and Scroll bar support is added to primitive "FormEl".
- /UI/VCAEngine: Transplate to Russian and Ukranian is updated.
- /UI/Vision: Shortcut Ctrl^A change for using to all widgets selection.
- /UI/Vision: Group selection on drawing mouse rect is made.
- /UI/Vision: Flag storing, for development widget object, is made unified.
- FIX:/UI/Vision: The crash into primitive "FormEl", on elements type change, is fixed.
- FIX:/UI/Vision: Some crash into atributes inspector on time group widgets access is fixed.
- FIX:/UI/Vision: On every time widget selection all reload is fixed.
- !!:/UI/Vision: Group widgets resizing is rewrited.
- /SYS: Updated Demo DB.


2007-12-25 Roman
- FIX:/UI/VCAEngine: Save and deletion of inherited widgets from container's widgets is fixed.
- /UI/Vision: Identifier generator is added for new included widgets.
- /UI/Vision: Context action for widget edition enter is added. 
- FIX:/UI/Vision: Group widgets deletion is fixed.
- FIX:/UI/WebVision: Some fixes is made.


2007-12-24 Roman
- !!!:/UI/VCAEngine, /UI/WebVision, /UI/Vision: Image links maping to primitive "Media" is added.
- !!:/UI/VCAEngine, /UI/Vision: Geometry coordinates is moved to real type.
- FIX:/UI/Vision: The size hint for text fields of the atributes inspector is fixed.
- FIX:/UI/Vision: Select disabling on widget close is fixed.
- FIX:/UI/Vision: Single parameter's scaling for primitive "Diagram" is fixed.
- FIX:/UI/WebVision: Form elements vertical central align is fixed.
- FIX:/UI/WebVision: A lot bugs is fixed.


2007-12-20 Roman
- !!:/SYS: Build for Mandriva 2008 support is added.
- !!:/Archive: A value archive trend building is updated.